# techwatch

./: CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  source_adapter_request.yml
.github/workflows/: ci.yml  nightly-browser-adapters.yml  release.yml
docs/architecture/: adrs.md  overview.md
tests/contracts/: test_schemas.py
tests/golden/: test_digest.py  test_scoring_golden.py
tests/integration/: test_cli.py  test_persistence.py
tests/unit/: test_adapter_base.py  test_currency.py  test_jsonld_extractor.py  test_models.py  test_normalization.py  test_normalization_engine.py  test_scoring.py  test_source_selector.py  test_taxonomy.py  test_trends.py  test_triggers.py
