[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "techwatch"
version = "0.1.0"
description = "Agentic CLI tech purchase research assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "TechWatch Contributors" },
]
keywords = ["cli", "tech", "deals", "agent", "price-tracker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "typer[all]>=0.12,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "httpx>=0.27,<1",
    "openai>=1.30,<2",
    "apscheduler>=3.10,<4",
    "babel>=2.15,<3",
    "rich>=13.7,<14",
    "tomli>=2.0,<3; python_version < '3.11'",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.44,<2",
]
dev = [
    "pytest>=8.2,<10",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
    "pre-commit>=3.7,<4",
]

[project.scripts]
techwatch = "techwatch.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/techwatch"]

[tool.hatch.build.targets.sdist]
include = ["src/techwatch"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["techwatch"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "browser: marks tests requiring playwright",
    "contract: marks LLM contract tests",
    "golden: marks golden fixture tests",
]
